--- a/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Views/MicrocodeRelease/_McuRelease.cshtml
+++ b/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Views/MicrocodeRelease/_McuRelease.cshtml
@@ -242,7 +242,7 @@
 }
 
 <script type="text/javascript">
-    function onCollapseClick(optional) {
+    function onCollapseClick(optional) {alert('---' + optional)
         if (optional.style.display == "block") {
           optional.style.display = "none";
         } else {
