--- a/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Views/Shared/Tools/_Tools.cshtml
+++ b/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Views/Shared/Tools/_Tools.cshtml
@@ -10,11 +10,11 @@
 
 
 <script type="text/javascript">
-    $('#spXMLAnalyser').on('click', function () {
-        window.open("http://10.5.250.85/",
-            '_blank',
-            'left=100,top=100,width=1200,height=800,toolbar=1,resizable=1');
-    });
+    //$('#spXMLAnalyser').on('click', function () {
+    //    window.open("http://10.5.250.85/",
+    //        '_blank',
+    //        'left=100,top=100,width=1200,height=800,toolbar=1,resizable=1');
+    //});
     //$('#imgBinaryData').on('click', function () {
     //    _decodeEventData();
     //});
