--- a/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Views/Shared/_Head.cshtml
+++ b/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Views/Shared/_Head.cshtml
@@ -14,20 +14,20 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>*@
 
 
-    <link href="http://cdn.kendostatic.com/2014.1.528/styles/kendo.common.min.css" rel="stylesheet" type="text/css" />
+    @*<link href="http://cdn.kendostatic.com/2014.1.528/styles/kendo.common.min.css" rel="stylesheet" type="text/css" />
     <link href="http://cdn.kendostatic.com/2014.1.528/styles/kendo.metro.min.css" rel="stylesheet" type="text/css" />
     <link href="http://cdn.kendostatic.com/2014.1.528/styles/kendo.dataviz.min.css" rel="stylesheet" type="text/css" />
-    <link href="http://cdn.kendostatic.com/2014.1.528/styles/kendo.dataviz.metro.min.css" rel="stylesheet" type="text/css" />
+    <link href="http://cdn.kendostatic.com/2014.1.528/styles/kendo.dataviz.metro.min.css" rel="stylesheet" type="text/css" />*@
 
     @*<link href="@Url.Content("~/Content/Awesomplete/awesomplete.base.css")" rel="stylesheet" type="text/css" />*@
     <link href="@Url.Content("~/Content/Awesomplete/awesomplete.css")" rel="stylesheet" type="text/css" />
 
-    <script src="@Url.Content("~/Scripts/Site.js")"></script>
+    @*<script src="@Url.Content("~/Scripts/Site.js")"></script>
     <script src="@Url.Content("~/Scripts/Json2.js")"></script>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/FrameSet.js")"></script>
     <script src="@Url.Content("~/Scripts/awesomplete.min.js")"></script>
 
     <script src="@Url.Content("/static/js/sorttable.js")"></script>
-    <script src="@Url.Content("/static/js/tweenmax.js")"></script>
+    <script src="@Url.Content("/static/js/tweenmax.js")"></script>*@
 </head>
