--- a/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Views/BiosImageOperations/Index.cshtml
+++ b/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Views/BiosImageOperations/Index.cshtml
@@ -25,7 +25,7 @@
         <table style="width:100%;">
             <tr>
                 <td style="width:20%;">
-                    <table tyle="background-color:rgb(41, 42, 43); border: 1px; border-radius: 5px;">
+                    <table tyle="background-color:transparent; border: 1px; border-radius: 5px;">
                         <tr>
                             <td>
                                 @Html.LabelFor(m => m.IfwiImage, new { @type = "file", @style = "color:gray;font-size:small;" })
@@ -74,7 +74,7 @@
                     @Html.Partial("../Shared/_Loader")
                 </td>
                 <td style="width:58%;">
-                    <table tyle="background-color:rgb(41, 42, 43); border: 1px; border-radius: 5px;">
+                    <table tyle="background-color:transparent; border: 1px; border-radius: 5px;">
                         @if (Model.IsDownloadAvailable)
                         {
                             <tr>
