--- a/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Views/SmartConfig/Index.cshtml
+++ b/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Views/SmartConfig/Index.cshtml
@@ -59,11 +59,11 @@
                                                         </td>
                                                         <td>&nbsp;</td>
                                                         <td>
-                                                            <input type="submit" class="btn btn-primary" style="width:100px;" name="LoadBinary" id="LoadBinary" value="Load Binary" onclick="onLoadBinaryClick();" />
+                                                            <input type="submit" class="btn btn-primary" style="width:100px;display:none;" name="LoadBinary" id="LoadBinary" value="Load Binary" onclick="onLoadBinaryClick();" />
                                                         </td>
                                                         <td>&nbsp;</td>
                                                         <td>
-                                                            <input type="button" class="btn btn-success" style="width:80px;" name="btnApply" id="btnApply" value="Apply" onclick="onApplyClicked();" />
+                                                            <input type="button" class="btn btn-warning" style="width:80px;display:none;" name="btnApply" id="btnApply" value="Apply" onclick="onApplyClicked();" />
                                                         </td>
                                                         <td>&nbsp;&nbsp;</td>
                                                     </tr>
