--- a/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Views/SmartConfig/_ConfigTreeNodeContents.cshtml
+++ b/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Views/SmartConfig/_ConfigTreeNodeContents.cshtml
@@ -1,5 +1,6 @@
 ﻿@using WindowService.DataModel;
 @using System.Drawing;
+@using Automation.Base.BuildingBlocks;
 
 @model ConfigTreeNode
 
@@ -27,6 +28,10 @@
     String idTable = "table_" + @Model.SubNodeSelectId;
 
     String idContainerTable = "Container_" + @Model.SubNodeSelectId;
+
+    String offsetSelectedValue = String.IsNullOrEmpty(@Model.RawDataMap.Size)? "100" :  @Model.RawDataMap.Offset.HexToInt().Value.ToString();
+    String maxsize = String.IsNullOrEmpty(@Model.RawDataMap.Size)? "100" : RawData.MAX_SIZE.HexToInt().Value.ToString();
+    String rawSelectedvalue = String.IsNullOrEmpty(@Model.RawDataMap.Size)? "50" : @Model.RawDataMap.Size.HexToInt().Value.ToString();
 
     <table id="@idContainerTable">
         <tr>
@@ -170,7 +175,7 @@
                                                             @Html.TextBoxFor(m => m.RawDataMap.Offset, new { @id = @idRawDataOffset, @title = @Model.SubNodeSelectId, placeholder = "--- Enter value ---", onchange = "onConfigPropertyChanged(this);", @class = "form-control textbox", @style = "width:110px;" })
                                                         </td>
                                                         <td>
-                                                            <input id="@idRawDataOffsetSlider" type="range" title="@idRawDataOffset" min="0" max="@Model.StreamTotalSizeText" step="1" list="ticks" value="@Model.RawDataMap.Offset" style="width:70px;"  
+                                                            <input id="@idRawDataOffsetSlider" type="range" title="@idRawDataOffset" min="0" max="@Model.StreamTotalSizeText" step="1" list="ticks" value="@offsetSelectedValue" style="width:70px;"  
                                                                    onchange="getElementById(this.title).value = '0x0{0}'.format(parseInt(this.value, 10).toString(16).toUpperCase());
                                                                              onConfigPropertyChanged(getElementById(this.title));">
                                                         </td>
@@ -192,7 +197,7 @@
                                                         </td>
                                                         <td>
                                                             <div>
-                                                                <input id="@idRawDataSizeSlider" type="range" title="@idRawDataSize" min="0" max="@Model.StreamTotalSizeText" step="1" list="ticks" style="width:70px;" 
+                                                                <input id="@idRawDataSizeSlider" type="range" title="@idRawDataSize" min="0" max="@maxsize" step="1" list="ticks" style="width:70px;" 
                                                                        onchange="getElementById(this.title).value = '0x0{0}'.format(parseInt(this.value, 10).toString(16).toUpperCase());
                                                                                  onConfigPropertyChanged(getElementById(this.title));"> @*console.log('----Raw data size Slider -- id ={0}, size Id = {1}'.format(this.id, getElementById(this.title).value));   ">*@
                                                             </div>
