--- a/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Views/SmartConfig/Index.cshtml
+++ b/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Views/SmartConfig/Index.cshtml
@@ -63,7 +63,7 @@
                                                         </td>
                                                         <td>&nbsp;</td>
                                                         <td>
-                                                            <input type="button" class="btn btn-warning" style="width:80px;display:none;" name="btnApply" id="btnApply" value="Apply" onclick="onApplyClicked();" />
+                                                            <input type="button" class="btn btn-warning" style="display:none;" name="btnApply" id="btnApply" value="Apply" onclick="onApplyClicked();" />
                                                         </td>
                                                         <td>&nbsp;&nbsp;</td>
                                                     </tr>
@@ -201,7 +201,7 @@
         border-radius:5px;
     }
     div.UploadBinaryDisabled {
-        visibility: collapse;
+        display: none;
     }
 
     div.UploadBinaryEnabled {
