--- a/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Views/SmartConfig/Index.cshtml
+++ b/mcu-release-automation/DcPaeWebService/IntelDCGSpsWebService/Views/SmartConfig/Index.cshtml
@@ -34,7 +34,7 @@
                                         </td>
                                         <td>&nbsp;</td>
                                         <td>
-                                            <input type="submit" class="btn btn-primary" style="width:100px;" name="Load" id="Load" value="Load Json" onclick="onLoadJsonClick();" />
+                                            <input type="submit" class="btn btn-primary" style="width:100px;display:none;" name="LoadJson" id="LoadJson" value="Load Json" onclick="onLoadJsonClick();" />
                                         </td>
                                         <td>&nbsp;&nbsp;</td>
                                     </tr>
